fix med panel collapse

--- a/web/3.0/css/stylesheet.css
+++ b/web/3.0/css/stylesheet.css
@@ -112,6 +112,9 @@ p {
     max-height: 500px;
     overflow:scroll;
 }
+.panel {
+    overflow: hidden;
+}
 .panel-heading a {
     text-transform: uppercase;
     color: black;
